# pic-killer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  commands.rs  exif.rs  gpx.rs  iptc.rs  main.rs  namedate.rs  scan.rs  timeop.rs  whereexpr.rs  xmp.rs
tests/: README.md  functest.ps1  perftest.ps1
