[package]
name = "pic-killer"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.7"
clap_mangen = "0.3.0"
filetime = "0.2.29"
indicatif = "0.18.6"
little_exif = "0.6.23"
quick-xml = "0.37.5"
rayon = "1.12.0"
walkdir = "2.5.0"

[profile.release]
strip = true
lto = "thin"
